Fix grid on mobile view

--- a/style-m.css
+++ b/style-m.css
@@ -115,6 +115,7 @@
 
     .destovka-potrubi-columns-container {
         flex-direction: column;
+        align-items: center;
     }
 
     #destovka-distance-group {
@@ -207,7 +208,7 @@
   
 }
 
-@media (max-width: 830px) {
+@media (max-width: 992px) {
     .destovka-vsakbox-container {
         display: flex;
         flex-direction: column;
@@ -217,12 +218,25 @@
     }
 
     .destovka-vsakbox-products {
-        width: 90%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 8px;
+    }
+
+    .destovka-vsakbox-grid {
+        min-width: 0;
+    }
+
+    .destovka-vsakbox-grid-row {
+        height: 20px;
+    }
+
+    .destovka-vsakbox-grid-cell {
+        width: 20px;
+        height: 20px;
     }
 }
 
